# collab-python-text-editor

./: LICENSE  pyproject.toml
collab_python_text_editor/: main.py  ui.py
